@@ -1,3 +1,12 @@
+2002-11-17  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* trans-types.c (g95_build_array_type): Assumed
+	sized arrays can have rank > 1.
+	* trans.c (g95_trans_code): Remove erroneous
+	warning about CONTINUE.
+	* trans-expr.c (g95_conv_variable): Remove
+	erroneous assert.
+
 2002-11-15  Paul Brook  <paul@nowt.org>
 
 	* trans-array.c (g95_conv_array_parameter): Check for NULL stride.
